welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:21: error: value */ is not a member of Unit
possible cause: maybe a semicolon is missing before `value */'?
	}*/
         ^